<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="mari709.mapasbsas.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.AppBarOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/seleccione_foto"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/subtitulo"
            android:textStyle="bold|italic" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:columnCount="2"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:rowCount="2">

                <ImageButton
                    android:id="@+id/img_jardin"
                    android:layout_width="@dimen/imgbutton_width"
                    android:layout_height="@dimen/imgbutton_height"
                    android:contentDescription="@string/jardin"
                    android:onClick="irMapa"
                    android:src="@drawable/jardinjapones" />

                <ImageButton
                    android:id="@+id/img_planetario"
                    android:layout_width="@dimen/imgbutton_width"
                    android:layout_height="@dimen/imgbutton_height"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:contentDescription="@string/planetario"
                    android:onClick="irMapa"
                    android:src="@drawable/planetario_buenos_aires" />


                <ImageButton
                    android:id="@+id/img_laboca"
                    android:layout_width="@dimen/imgbutton_width"
                    android:layout_height="@dimen/imgbutton_height"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:contentDescription="@string/boca"
                    android:onClick="irMapa"
                    android:src="@drawable/la_boca" />

                <ImageButton
                    android:id="@+id/img_teatro"
                    android:layout_width="@dimen/imgbutton_width"
                    android:layout_height="@dimen/imgbutton_height"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:contentDescription="@string/teatro"
                    android:onClick="irMapa"
                    android:src="@drawable/teatro_colon_buenos_aires" />

            </GridLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>